--- a/my.css
+++ b/my.css
@@ -43,7 +43,7 @@ header h1 {
 }
 .nav {
     background-color: rgb(241, 142, 20);
-    font-size: 14px;
+    font-size: 10px;
 }
 .nav ul {
     display: flex;
@@ -52,10 +52,17 @@ header h1 {
     justify-content: flex-end;
 }
 .nav ul li {
-    width: 150px;
+    width: 100px;
+    display: block;
     list-style-type: none;
-    margin-right: 10px;
+    text-align: right;
     
+}
+.nav .nav2 {
+    width: 90px;
+}
+.nav .nav4 {
+    width: 80px;
 }
 .navtext:hover {
     color: blue;
